Enable file system folders as drop targets.
Previously file system folders on the workspace were not drop targets.
Now file system folders are drop targers for other file system item
types. Dropping a file system item on a folder results in the dropped
item being moved to that folder within the "Home screen/" directory on
the file system.

Demo: http://dr/file/d/1JNK4nwuD5o4ZWiP9iRI1ZUkuCk0fMG5R/view

Bug: 457783085
Flag: com.android.launcher3.enable_file_system_folders_as_drop_targets
Test: atest HomeScreenFilesProviderTest
Test: atest WorkspaceAccessibilityHelperTest
Test: atest WorkspaceTest
Change-Id: Ia878af9d0edd881891c8b8e4fc8d127738be3c77